@@ -83,6 +83,11 @@
                 <version>0.0.5</version>
                 <configuration>
                     <mainClass>org.monarchinitiative.hpoworkbench.StockUiApplication</mainClass>
+                    <options>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event==org.controlsfx.controls</option>
+                    </options>
+
                 </configuration>
             </plugin>
             <plugin>
